--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.h5 filter=lfs diff=lfs merge=lfs -text
 5.RNN/week[[:space:]]2/Emojify/data/glove.6B.50d.txt filter=lfs diff=lfs merge=lfs -text
+*.npy filter=lfs diff=lfs merge=lfs -text
